--- a/bibliography.html
+++ b/bibliography.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-   
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" href="main.css">
     <script type='text/javascript' src='script.js'></script>
     </head>
@@ -22,21 +23,21 @@
     <div id="header">Bibliography</div>
 
     <div id="content">
-    <p style="font-family:'Minion Pro';font-size:16px;color:orange;">Education :</p>
+    <p style="font-family: 'Lora', serif;font-size:16px;color:orange;">Education :</p>
     <p><strong>BA(HON) VISUAL ARTS</strong> / Academy of Visual Arts, Hong Kong Baptist University / <em>2016'</em></p>
         <hr style="width: 60px;margin-bottom:1em; margin-top:1.7em;color:#545454;transparency:60%;"></hr>
     <br></br>
-    <p style="font-family:'Minion Pro';font-size:16px;color:orange;">Group Exhibitions :</p>
+    <p style="font-family: 'Lora', serif;font-size:16px;color:orange;">Group Exhibitions :</p>
     <p><strong>Dialoge über Bücher</strong> (Dialogues on books) / Dortmunder U, Uzwei / <em>25. Apr. to 07. June, 2015</em></p>
     <p style="font-size:10px; color:black; line-height:1.2em; max-width: 800px;"><em>Posture Study</em> as well as <em>A Typography Experience</em> were exhibited on the event.
 </p>
     <hr style="width: 60px; margin-top:1.7em;color:#545454;transparency:60%;"></hr>
     <br></br>
-    <p style="font-family:'Minion Pro';font-size:16px;color:orange;">Prizes :</p>
+    <p style="font-family: 'Lora', serif;font-size:16px;color:orange;">Prizes :</p>
     <p><strong>Honourable Award</strong> / Competition of Souvenir Design of Macao / <em>2014</em></p>
         <hr style="width: 60px;margin-bottom:1em; margin-top:1.7em;color:#545454;transparency:60%;"></hr>
     <br></br>
-    <p style="font-family:'Minion Pro';font-size:16px;color:orange;">Working experience :</p>
+    <p style="font-family: 'Lora', serif;font-size:16px;color:orange;">Working experience :</p>
     <p><strong>Graphic Designer</strong> / Haiteng Media Co.Ltd., Hangzhou / <em>May to July, 2015</em></p>
     <p style="font-size:10px; color:black; line-height:1.2em; max-width: 800px;">Acting as the lead graphic designer, creating printed posters, digital posters for promotions of events as well as campaigns.
 </p>
