--- a/branding.html
+++ b/branding.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="slick-1.5.7/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick-1.5.7/slick/slick-theme.css"/>
      <link rel="stylesheet" href="main.css">
