--- a/others.html
+++ b/others.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   
+   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
      <link rel="stylesheet" href="main.css">
     <script type='text/javascript' src='script.js'></script>
     </head>
